fix: index.html block rename

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,6 @@
     {% block head %}{% endblock %}
 </head>
 <body>
-    {% block head %}{% endblock %}
+    {% block body %}{% endblock %}
 </body>
 </html>
