--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block head %}
-
+<h1>Project</h1>
 {% endblock %}
 
-{% block head %}
+{% block body %}
 
 {% endblock %}
