--- a/templates/index.html
+++ b/templates/index.html
@@ -24,5 +24,9 @@
             </td>
         </tr>
     </table>
+    <form action="/" method="POST">
+    <input type="text" name="content" id="content">
+    <input type="submit" value="Add Task">
+    </form>
     </div>
 {% endblock %}
