--- a/templates/update.html
+++ b/templates/update.html
@@ -8,8 +8,8 @@
 <div class="content">
     <h1>Update Project</h1>
     <form action="/update/{{ task.id }}" method="POST">
-    <input type="text" name="content" id="content">
-    <input type="submit" value="Add Task">
+    <input type="text" name="content" id="content" value="{{ task.content }}">
+    <input type="submit" value="Update">
     </form>
     </div>
 {% endblock %}
