--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
 <div class="content">
     <h1>Project</h1>
 
+    {% if tasks|length < 1 %}
+    <h4>Create a task!</h4>
+    {% else %}
+
     <table>
         <tr>
             <th>Task</th>
@@ -26,6 +30,7 @@
         </tr>
         {% endfor %}
     </table>
+    {% endif %}
     <form action="/" method="POST">
     <input type="text" name="content" id="content">
     <input type="submit" value="Add Task">
